--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -8,8 +8,8 @@
         rgba(255, 255, 255, 0.5),
         rgba(255, 255, 255, 0.5)
     ),
-     url('https://res.cloudinary.com/dxkxvfo2o/image/upload/v1660737946/New-blogs/ankit-6/4_hi8gmj.png');
-    background-size: cover; 
+     url('https://thumbs.dreamstime.com/b/pink-workplace-computer-supplies-coffee-alarm-desk-table-cup-clock-morning-deadline-concept-top-view-space-your-178968820.jpg');
+    background-size:cover; 
 }
 .registerTitle{
 font-size: 50px;
