--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -20,11 +20,12 @@
     position: absolute;
     top: 20%;
     font-size: 100px;
+    color:white
 }
 
 .headerImg{
     width: 100%;
     height: 450px;
     margin-top: 80px;
-    object-fit: cover;
+    object-fit:cover;
 }
