--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -25,7 +25,8 @@
 
 .headerImg{
     width: 100%;
-    height: 450px;
+    height: 600px;
     margin-top: 80px;
     object-fit:cover;
+    margin-bottom:80px ;
 }
