--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,32 +1,31 @@
+
 .header {
-    margin-top: 60px;
+  margin-top: 60px;
 }
 
 .headerTitles {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: 'Lora', serif;
-    color: #444;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Lora", serif;
+  color: #444;
 }
 
-.headerTitleSm{
-    position: absolute;
-    top: 18%;
-    font-size: 20px;
+.headerTitleSm {
+  position: absolute;
+  top: 18%;
+  font-size: 20px;
 }
 
-.headerTitleLg{
-    position: absolute;
-    top: 20%;
-    font-size: 100px;
-    color:white
+.headerTitleLg {
+  position: absolute;
+  top: 20%;
+  font-size: 100px;
 }
 
-.headerImg{
-    width: 100%;
-    height: 600px;
-    margin-top: 80px;
-    object-fit:cover;
-    margin-bottom:80px ;
+.headerImg {
+  width: 100%;
+  height: 450px;
+  margin-top: 80px;
+  object-fit: cover;
 }
